--- a/Server/package.json
+++ b/Server/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "echo 'No build step required'",
     "dev": "nodemon app.js"
   },
   "author": "ns",
