--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -2,15 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "./index.js",  
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "src": "/(.*)",
+      "dest": "/",
+      "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+          "headers":{
+              "Access-Control-Allow-Origin": "*"
+          }
     }
+    
   ]
 }
